<resources>
    <string name="app_name">Wreak</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="toolbar_title_table">Table</string>
    <string name="account">Account</string>
    <string name="history">History</string>
    <string name="calendar">Calendar</string>
    <string name="add_cancel">Cancel</string>
    <string name="add_complete">Ok</string>
    <string name="toolbar_title_add">Add</string>
    <string name="toolbar_btn_add">Add</string>
    <string name="input_book_name">Book name</string>
    <string name="input_total_pages">Total pages</string>
    <string name="input_everyday_pages">Everyday pages</string>
    <string name="complete_time">Complete time</string>
    <string name="search_book_cover">Search book cover</string>
    <string name="toolbar_back">Back</string>
</resources>
